k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: paymybuddy
  labels:
    app: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
