k8s/paymybuddy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paymybuddy
  namespace: paymybuddy
  labels:
    app: paymybuddy
spec:
  type: ClusterIP
  selector:
    app: paymybuddy
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
